# qml_securlogon

./: .gitignore
src/: CMakeLists.txt  main.cpp
src/images/: images.qrc
src/qml/: Main.qml  qml.qrc
src/qml/common/: Common.qml
src/qml/components/button/: ButtonCheckBoxText.qml  ButtonImage.qml  ButtonImageText.qml  ButtonText.qml  ButtonTextLeft.qml  ButtonTextRight.qml
src/qml/components/cell/: CellText.qml
src/qml/components/combobox/: ComboBoxCustom.qml  ComboBoxCustomButton.qml  ComboBoxCustomCheckBox.qml
src/qml/components/flickable/: FlickableCustom.qml
src/qml/components/inputoldkey/: InputOldKey.qml
src/qml/components/listview/: ListViewButton.qml  ListViewCheckBox.qml  ListViewImageText.qml
src/qml/components/other/: LineTire.qml
src/qml/components/popup/: PopupCustom.qml  PopupCustomDialogHeader.qml  PopupCustomWindow.qml  PopupCustomWindowBig.qml
src/qml/components/radio/: RadioColumn.qml  (+1 more)
src/qml/popups/: AddedNewLicense.qml  DialogSetOTP.qml  ListKDC.qml  PostCheckSettingsWindow.qml  PreCheckSettingsWindow.qml
src/qml/views/: AdditionalSettingsAll.qml  ChoosingTypeSetting.qml  ChoosingTypeSettingAuthentication.qml  ChoosingTypeSettingAuthenticationLocal.qml  ChoosingTypeSettingAuthenticationNet.qml  ChoosingTypeSettingRDP.qml  LicenseAgreement.qml  LicensesSecurlogon.qml  LocalNoPKIAuthenticationSetting.qml  NetNoPKIAuthenticationSetting.qml  NetOTPAuthenticationSetting.qml  NetPKIAuthenticationSetting.qml  RemoteRDPNoPKIAuthenticationSetting.qml  RemoteRDPPKIAuthenticationSetting.qml  SettingsElectronicKeyNoPKI.qml  WelcomView.qml
(+13 files in other folders)
